# homework_9.1

./: .env.sample  .flake8  .gitignore  main.py  mylog.txt  pyproject.toml  test_log.txt
src/: csv_xlsx.py  decorators.py  external_api.py  generators.py  handler.py  logger.py  masks.py  mylog.txt  processing.py  test_log.txt  utils.py  widget.py
tests/: mylog.txt  test_csv_xlsx.py  test_for_transaction.json  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py  tests.py
